
[package]
name = "knee_scraper"
version = "0.1.5"
authors = ["Black2ooth <info-leakerz@proton.me>"]
description = "A Rust web scraper for recursively scraping web pages and downloading media, optionaly based on keywords or phrases. It also parses js content for keywords"
repository = "https://github.com/Code-ish/Knee_Scraper"
homepage = "https://github.com/Code-ish/Knee_Scraper"
edition = "2021" 
license = "MIT"


[dependencies]
fs = "0.0.5"
futures = "0.3.30"
rand = "0.8.5"
regex = "1.11.0"
reqwest = "0.12.8"
scraper = "0.20.0"
tokio = { version = "1.40.0", features = ["full", "fs"] }
url = "2.5.2"
